--- a/react-styled-component/package.json
+++ b/react-styled-component/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "react-jest",
+  "name": "react-with-classnames-styles-cssmodules",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "author": "daint2@fsoft.com.vn",
   "license": "ISC",
   "scripts": {
-    "start": "webpack-dev-server --hot",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:storybook": "start-storybook -p 6969 --quiet"
+    "start": "webpack-dev-server --hot"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -20,30 +16,23 @@
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/react": "^5.0.10",
     "autoprefixer": "^9.4.10",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "enzyme-to-json": "^3.3.5",
-    "jest": "^24.7.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2",
-    "react-test-renderer": "^16.8.6",
-    "react-testing-library": "^6.1.2",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.3.4",
-    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "common-tags": "^1.8.0",
-    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.8.0",
