--- a/react-redux-saga/package.json
+++ b/react-redux-saga/package.json
@@ -18,6 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-intl": "^2.8.0",
+    "react-router-dom": "^5.0.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
