--- a/react-redux-saga/package.json
+++ b/react-redux-saga/package.json
@@ -19,7 +19,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
