--- a/react-redux-firebase/package.json
+++ b/react-redux-firebase/package.json
@@ -19,10 +19,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-motion": "^0.5.2",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "react-spring": "^8.0.20",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
