--- a/react-mobx/.babelrc
+++ b/react-mobx/.babelrc
@@ -42,7 +42,8 @@
         ],
         "alias": {
           "@components": "./src/components",
-          "@stores": "./src/stores"
+          "@stores": "./src/stores",
+          "@hocs": "./src/hocs"
         },
       },
     ],
