--- a/react-mobx/package.json
+++ b/react-mobx/package.json
@@ -28,10 +28,14 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/runtime-corejs2": "^7.4.4",
     "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
+    "hoist-non-react-statics": "^3.3.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.1.1",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
+    "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.2.0"
