--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -8,8 +8,8 @@
   },
   "author": "nguyen.tran.dai@sun-asterisk.com",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
-    "build": "cross-env NODE_ENV=production webpack",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --config configs/webpack/webpack.dev.js",
+    "build": "yarn build:clean && cross-env NODE_ENV=production webpack --config configs/webpack/webpack.prod.js --progress",
     "build:clean": "rimraf ./build"
   },
   "resolutions": {
@@ -17,18 +17,23 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@hot-loader/react-dom": "^16.8.6",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "common-tags": "^1.8.0",
+    "connected-react-router": "^6.4.0",
     "cross-env": "^5.2.0",
     "date-fns": "^1.30.1",
+    "history": "^4.9.0",
     "hoist-non-react-statics": "^3.3.0",
     "i18next": "^15.1.2",
     "immer": "^3.1.2",
+    "is-promise": "^2.1.0",
     "lodash-es": "^4.17.11",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-hot-loader": "^4.8.8",
     "react-i18next": "^10.10.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
@@ -62,11 +67,14 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.3.0",
+    "img-loader": "^3.0.1",
     "lint-staged": "^8.1.7",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.17.1",
+    "redux-devtools-extension": "^2.13.8",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
