--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
-    "@hot-loader/react-dom": "^16.8.6",
+    "@hot-loader/react-dom": "16.8.6",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "common-tags": "^1.8.0",
@@ -74,13 +74,13 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.17.1",
-    "redux-devtools-extension": "^2.13.8",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.4",
     "url-loader": "^1.1.2",
     "webpack": "4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.3.0",
     "webpack-merge": "^4.2.1"
