--- a/react-redux-boilerplate/package.json
+++ b/react-redux-boilerplate/package.json
@@ -31,11 +31,13 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.3.4",
+    "immer": "^3.1.2",
     "kuker-emitters": "^6.7.4",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.8.0",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5"
   }
 }
