--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -2,6 +2,7 @@
   "name": "react-boilerplate",
   "version": "1.0.0",
   "description": "React Boilerplate",
+  "license": "MIT",
   "engines": {
     "node": ">=8.10.0",
     "npm": ">=5.6.0"
@@ -9,6 +10,7 @@
   "author": "nguyen.tran.dai@sun-asterisk.com",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --config configs/webpack/webpack.dev.js",
+    "prod": "node server",
     "build": "yarn build:clean && cross-env NODE_ENV=production webpack --config configs/webpack/webpack.prod.js --progress",
     "build:clean": "rimraf ./build"
   },
@@ -21,9 +23,11 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "common-tags": "^1.8.0",
+    "compression": "^1.7.4",
     "connected-react-router": "^6.4.0",
     "cross-env": "^5.2.0",
     "date-fns": "^1.30.1",
+    "express": "^4.17.1",
     "history": "^4.9.0",
     "hoist-non-react-statics": "^3.3.0",
     "i18next": "^15.1.2",
