--- a/react-boilerplate/.stylelintrc
+++ b/react-boilerplate/.stylelintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "stylelint-config-recommended-scss"
+  "extends": [
+    "stylelint-config-recommended-scss",
+    "stylelint-config-prettier"
+  ]
 }
