--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -85,6 +85,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^10.0.1",
+    "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.6.1",
     "terser-webpack-plugin": "^1.2.4",
