--- a/react-boilerplate/.stylelintrc
+++ b/react-boilerplate/.stylelintrc
@@ -1,6 +1,3 @@
 {
-  "extends": [
-    "stylelint-config-recommended-scss",
-    "stylelint-config-prettier"
-  ]
+  "extends": ["stylelint-prettier/recommended"]
 }
