--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -12,10 +12,13 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --config configs/webpack/webpack.dev.js",
     "prod": "yarn build && yarn node server",
     "build": "yarn build:clean && cross-env NODE_ENV=production webpack --config configs/webpack/webpack.prod.js --progress",
-    "build:clean": "rimraf ./build"
+    "build:clean": "rimraf ./build",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build"
   },
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
+    "babel-core": "7.0.0-bridge.0",
+    "docz/**/webpack": "4.28.4"
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
@@ -42,6 +45,7 @@
     "react-i18next": "^10.10.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-select": "^3.0.3",
     "reactstrap": "^8.0.0",
     "redux": "4.0.1",
     "simple-storage": "^4.0.2"
@@ -62,6 +66,8 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
+    "docz": "latest",
+    "docz-theme-default": "latest",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
