--- a/react-boilerplate/package.json
+++ b/react-boilerplate/package.json
@@ -59,6 +59,7 @@
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
+    "@svgr/webpack": "^4.3.0",
     "autoprefixer": "^9.5.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
