--- a/react-monaco-editor/package.json
+++ b/react-monaco-editor/package.json
@@ -35,12 +35,12 @@
     "immer": "^3.1.2",
     "is-promise": "^2.1.0",
     "lodash-es": "^4.17.11",
+    "monaco-editor": "^0.17.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-hot-loader": "^4.8.8",
     "react-i18next": "^10.10.0",
-    "react-monaco-editor": "^0.26.1",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "reactstrap": "^8.0.0",
