--- a/react-typescript/tsconfig.json
+++ b/react-typescript/tsconfig.json
@@ -1,14 +1,21 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"]
+    },
     "outDir": "./build/",
     "sourceMap": true,
     "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": false,
     "target": "esnext",
     "module": "esnext",
-    "lib": ["es5", "es6", "dom"],
+    "lib": ["esnext", "dom"],
     "jsx": "react",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   },
   "include": ["src/**/*"],
-  // "exclude": ["node_modules"]
+  "exclude": ["node_modules"]
 }
