--- a/react-typescript/package.json
+++ b/react-typescript/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/html-webpack-plugin": "^3.2.1",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
@@ -35,6 +36,6 @@
     "webpack-dev-server": "^3.8.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --config configs/webpack.config --hot"
   }
 }
