--- a/react-typescript/package.json
+++ b/react-typescript/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "papaparse": "^5.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
