--- a/react-typescript/tsconfig.json
+++ b/react-typescript/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"]
+      "*": ["src/*", "typings/*"]
     },
     "outDir": "./build",
     "sourceMap": true,
