--- a/react-redux-saga/package.json
+++ b/react-redux-saga/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
+    "reselect": "^4.0.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
