--- a/react-redux-saga/package.json
+++ b/react-redux-saga/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.4",
     "axios": "^0.18.0",
+    "hoist-non-react-statics": "^3.3.0",
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
