--- a/react-formik/package.json
+++ b/react-formik/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-toastify": "^5.1.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
