--- a/react-formik/package.json
+++ b/react-formik/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.4",
     "axios": "^0.18.0",
-    "formik": "^1.5.7",
+    "formik": "^1.5.8",
+    "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
