--- a/hook-utils/package.json
+++ b/hook-utils/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.16",
     "@emotion/styled": "^10.0.15",
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
