--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "editor.formatOnSave": true,
-  "eslint.autoFixOnSave": true,
-  "eslint.validate": [
-    { "language": "javascript", "autoFix": true },
-    { "language": "javascriptreact", "autoFix": true },
-    { "language": "typescript", "autoFix": true },
-    { "language": "typescriptreact", "autoFix": true }
-  ]
+  // "eslint.autoFixOnSave": true,
+  // "eslint.validate": [
+  //   { "language": "javascript", "autoFix": true },
+  //   { "language": "javascriptreact", "autoFix": true },
+  //   { "language": "typescript", "autoFix": true },
+  //   { "language": "typescriptreact", "autoFix": true }
+  // ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
